<resources>
    <string name="LOGIN_URL">https://herokuservervisitapp.herokuapp.com/api/login</string>
    <string name="REGISTER_URL">https://herokuservervisitapp.herokuapp.com/api/register</string>
    <string name="CHANGE_EMAIL_URL">https://herokuservervisitapp.herokuapp.com/api/changeEmail</string>
    <string name="CHANGE_PASSWORD_URL">https://herokuservervisitapp.herokuapp.com/api/changePassword</string>
    <string name="CHANGE_PHONE_NUMBER_URL">https://herokuservervisitapp.herokuapp.com/api/changeNumber</string>
    <string name="RIGHT_TO_BOOK_URL">https://herokuservervisitapp.herokuapp.com/api/rightToBook</string>
    <string name="DOCTOR_SPEC_URL">https://herokuservervisitapp.herokuapp.com/api/doctor</string>
    <string name="PRESCRIPTION_URL">https://herokuservervisitapp.herokuapp.com/api/prescription</string>
    <string name="REFFERAL_URL">https://herokuservervisitapp.herokuapp.com/api/refferal</string>
    <string name="GET_UNOCCUPIED_DATES_URL">https://herokuservervisitapp.herokuapp.com/api/searchUnoccupied</string>
    <string name="ADD_OPINION_URL">https://herokuservervisitapp.herokuapp.com/api/historyV/opinion</string>
    <string name="HISTORY_VISIT_URL">https://herokuservervisitapp.herokuapp.com/api/historyV</string>
    <string name="CURRENT_VISIT_URL">https://herokuservervisitapp.herokuapp.com/api/currentV</string>
    <string name="SEARCH_BY_QUERY_URL">https://herokuservervisitapp.herokuapp.com/api/searchByQuery</string>
    <string name="UNOCCUPIED_VISIT_URL">https://herokuservervisitapp.herokuapp.com/api/search</string>
    <string name="CANCEL_VISIT_URL">https://herokuservervisitapp.herokuapp.com/api/currentV/cancel</string>
    <string name="BOOK_VISIT_URL">https://herokuservervisitapp.herokuapp.com/api/book</string>

    <string name="app_name">VisitApp</string>
    <string name="app_title">TwójDoktor</string>
    <string name="registration">Rejestracja</string>
    <string name="main_view">Wyszukaj specjalistę</string>
    <string name="email">E-mail</string>
    <string name="password">Hasło</string>
    <string name="logIn">Zaloguj</string>
    <string name="register">Zarejestruj</string>
    <string name="emailRequest">Wprowadź e-mail</string>
    <string name="passwordRequest">Wprowadź hasło</string>
    <string name="logInSuccess">Zalogowano pomyślnie</string>
    <string name="logInError">Błąd logowania</string>
    <string name="responseError">Błąd odpowidzi serwera</string>
    <string name="connectionError">Błąd połączenia z serwerem</string>
    <string name="registerTitle">Wypełnij poniższy formularz:</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="dateOfBirth">Data urodzenia</string>
    <string name="sex">Płeć:</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="phoneNumber">Numer telefonu</string>
    <string name="confirm">Zatwierdź</string>
    <string name="registerSuccess">Konto utworzone. Zaloguj się do serwisu.</string>
    <string name="registerError">Błąd rejestracji</string>
    <string name="fillEmail">Wprowadź e-mail</string>
    <string name="fillPassword">Wprowadź hasło</string>
    <string name="fillName">Wprowadź imię</string>
    <string name="fillSurname">Wprowadź nazwisko</string>
    <string name="fillDateOfBirth">Wprowadź datę urodzenia</string>
    <string name="fillPhoneNumber">Wprowadź numer telefonu</string>
    <string name="passwordTooShort">Hasło musi zawierać conajmniej 5 znaków</string>

    <string name="userColon">Użytkownik:</string>
    <string name="emailColon">E-mail:</string>

    <string name="search">Wyszukaj</string>
    <string name="searchBySpec">Wyszukaj po specjalności</string>
    <string name="recommendedDoctors">LEKARZE Z NAJWYŻSZĄ OCENĄ</string>
    <string name="popularSpecs">POPULARNE SPECJALNOŚCI</string>
    <string name="choose">Umów wizytę</string>
    <string name="singleQuotationMark">\'</string>
    <string name="chooseDateOfVisit">Wybierz termin wizyty</string>
    <string name="sureToBookTheVisit">Czy potwierdzasz chęć rezerwacji wizyty ?</string>
    <string name="visitBooked">Wizyta zarezerwowana</string>
    <string name="shortYear">r.</string>
    <string name="shortHour">godz.</string>
    <string name="noRefferalCannotBookTheVisit">Brak skierowania do lekarza z wybraną specjalnością.</string>
    <string name="hint">Podpowiedź:</string>
    <string name="seeRefferalOrSeeGPAdvice">Zobacz dostępne skierowania w zakładce lub zacznij leczenie od wizyty u lekarza ogólnego.</string>
    <string name="iUnderstand">Rozumiem</string>

    <string name="cancelVisit">Odwołaj wizytę</string>
    <string name="cancelV">Odwołaj</string>
    <string name="visitCancelled">Wizyta odwołana</string>
    <string name="sureToCancelVisit">Czy na pewno chcesz odwołać tę wizytę ?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="historyOfVisits">Historia wizyt</string>
    <string name="visitDate">Termin wizyty:</string>
    <string name="visitHour">godz.</string>
    <string name="addOpinion">Dodaj opinię</string>
    <string name="addOpinionLongText">Dodaj opinię lekarzowie na podstawie przeprowadzonej wizyty.</string>
    <string name="opinionAdded">Opinia została dodana</string>
    <string name="veryBad">Nie polecam lekarza !</string>
    <string name="needSomeImprovements">Wymaga więcej zaangażowania...</string>
    <string name="average">Ponadprzeciętnie, nie było tak źle.</string>
    <string name="good">Oceniam dobrze.</string>
    <string name="excellent">Polecam lekarza! Jestem zadowolony/-a.</string>
    <string name="fillRatingStars">Aby zapisać oceń lekarza.</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>

    <string name="refferal">Skierowania</string>
    <string name="refferalNo">Skierowanie nr</string>
    <string name="refferalIssuedTo">Skierowanie do:</string>
    <string name="refferalIssuedBy">Wydane przez:</string>
    <string name="refferalIssuedDate">Data wydania:</string>
    <string name="refferalExpiryDate">Ważne do:</string>
    <string name="more">Więcej</string>
    <string name="refferalNumber">Skierowanie numer</string>
    <string name="purpose">Cel skierowania</string>
    <string name="refferalToDoctor">Skierowanie do lekarza o specjalności:</string>

    <string name="prescription">Recepty</string>
    <string name="prescriptionNo">Recepta nr</string>
    <string name="prescriptionIssuedBy">Wydane przez:</string>
    <string name="prescriptionIssuedDate">Data wydania:</string>
    <string name="prescriptionExpiryDate">Ważne do:</string>
    <string name="prescriptionNumber">Recepta numer</string>
    <string name="patient">Pacjent</string>
    <string name="medicine">Lek</string>
    <string name="issuedDate">Data wydania</string>
    <string name="expDate">Data ważności</string>
    <string name="doctor">Lekarz</string>

    <string name="changeUserData">Zmień dane</string>
    <string name="changeUserDataAndCommit">Uzupełnij pola i zatwierdź</string>
    <string name="changeEmail">Zmień e-mail</string>
    <string name="changePassword">Zmień hasło</string>
    <string name="changeNumber">Zmień numer</string>
    <string name="writeCurrentEmail">Wpisz obecny e-mail</string>
    <string name="writeNewEmail">Wpisz nowy e-mail</string>
    <string name="confirmNewEmail">Potwierdź nowy e-mail</string>
    <string name="writeCurrentPassword">Wpisz obecne hasło</string>
    <string name="writeNewPassword">Wpisz nowe hasło</string>
    <string name="confirmNewPassword">Potwierdź nowe hasło</string>
    <string name="writeNewNumber">Wpisz nowy numer</string>
    <string name="emailsAreDifferent">E-maile różnią się</string>
    <string name="passwordsAreDifferent">Hasła różnią się</string>
    <string name="numberRequest">Wprowadź numer telefonu</string>
    <string name="changeSaved">Zapisano zmianę </string>
    <string name="email2">e-mail</string>
    <string name="password2">hasło</string>
    <string name="phoneNumber2">numer telefonu</string>

    <string name="logOut">Wyloguj</string>

    <string name="visits">Wizyty</string>
    <string name="documents">Dokumenty</string>
    <string name="account">Konto</string>

    <string name="navigation_sideBar_open">Open navigation sidebar</string>
    <string name="navigation_sideBar_close">Close navigation sidebar</string>
</resources>
