<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorAlmostWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="29dp"
            android:text="@string/changeUserDataAndCommit"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etOldEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/writeCurrentEmail"
            android:ems="10"
            android:hint="@string/writeCurrentEmail"
            android:inputType="textEmailAddress"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/etNewEmail1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/writeNewEmail"
            android:ems="10"
            android:hint="@string/writeNewEmail"
            android:inputType="textEmailAddress"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/etNewEmail2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/confirmNewEmail"
            android:ems="10"
            android:hint="@string/confirmNewEmail"
            android:inputType="textEmailAddress"
            tools:targetApi="O" />

        <Button
            android:id="@+id/bChangeEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"            android:layout_marginTop="15dp"
            android:background="@drawable/shape_button"
            android:text="@string/changeEmail"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/writeCurrentPassword"
            android:ems="10"
            android:hint="@string/writeCurrentPassword"
            android:inputType="textPassword"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/etNewPassword1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/writeNewPassword"
            android:ems="10"
            android:hint="@string/writeNewPassword"
            android:inputType="textPassword"
            tools:targetApi="O" />

        <EditText
            android:id="@+id/etNewPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/confirmNewPassword"
            android:ems="10"
            android:hint="@string/confirmNewPassword"
            android:inputType="textPassword"
            tools:targetApi="O" />

        <Button
            android:id="@+id/bChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_button"
            android:text="@string/changePassword"
            android:textColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:autofillHints="@string/writeNewNumber"
            android:ems="10"
            android:hint="@string/writeNewNumber"
            android:inputType="number"
            tools:targetApi="O" />

        <Button
            android:id="@+id/bChangeNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_button"
            android:text="@string/changeNumber"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</ScrollView>