<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvTitle"
            android:text="@string/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="42dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp"/>
    <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:autofillHints="@string/email" tools:targetApi="O"/>
    <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="99dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:autofillHints="@string/password" tools:targetApi="O"/>
    <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:autofillHints="@string/name" tools:targetApi="O"/>
    <EditText
            android:id="@+id/etSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/surname"
            android:ems="10"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            android:autofillHints="@string/surname" tools:targetApi="O"/>
    <EditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:hint="@string/dateOfBirth"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="99dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/etSurname"
            android:autofillHints="@string/dateOfBirth" tools:targetApi="O"/>
    <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etDateOfBirth" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="99dp"
            android:autofillHints="@string/phoneNumber" tools:targetApi="O"/>
    <TextView
            android:id="@+id/tvSex"
            android:text="@string/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/tvSex" android:id="@+id/rgSex">
        <RadioButton
                android:text="@string/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbWoman" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rbMan" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:id="@+id/bConfirm"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSex" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
